Added guidance and resources
